--- a/public/myaccount.html
+++ b/public/myaccount.html
@@ -16,12 +16,12 @@
 	<!-- Custom styles for our template -->
 	<link rel="stylesheet" href="bootstrap-theme.css" media="screen" >
 	<link rel="stylesheet" href="main.css">
+	<link rel="stylesheet" href="http://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.6.3/css/font-awesome.min.css">
+	
 
-	<!-- HTML5 shim and Respond.js IE8 support of HTML5 elements and media queries -->
-	<!--[if lt IE 9]>
-	<script src="assets/js/html5shiv.js"></script>
-	<script src="assets/js/respond.min.js"></script>
-	<![endif]-->
+	
+	<script src="routes/respond.min.js"></script>
+	
 </head>
 
 <body class="home">
@@ -43,8 +43,9 @@
 					<li class="dropdown">
 						<a href="#" class="btn dropdown-toggle" data-toggle="dropdown"><i class="fa fa-user"></i>My Account <b class="caret"></b></a>
 						<ul class="dropdown-menu">
-							<li><a href="dashboard.html">Dashboard</a></li>
-							<li><a href="profile.html">Profile</a></li>
+							
+							<li><a href="servicemen profile.html">Dashboard</a></li>
+							<li><a href="resetpassword.html">Reset Password</a></li>
 							<hr>
 							<li><a href="index.html">Logout</a></li>
 						
@@ -257,8 +258,8 @@
 <!-- JavaScript libs are placed at the end of the document so the pages load faster -->
 	<script src="http://ajax.googleapis.com/ajax/libs/jquery/1.10.2/jquery.min.js"></script>
 	<script src="http://netdna.bootstrapcdn.com/bootstrap/3.0.0/js/bootstrap.min.js"></script>
-	<!-- <script src="assets/js/headroom.min.js"></script>
-	<script src="assets/js/jQuery.headroom.min.js"></script>
-	<script src="assets/js/template.js"></script>-->
+	<script src="routes/headroom.min.js"></script>
+	<script src="routes/jQuery.headroom.min.js"></script>
+	<script src="routes/template.js"></script>
 </body>
 </html>
