hey yeah this is new code for sessions

--- a/public/resetpassword.html
+++ b/public/resetpassword.html
@@ -56,7 +56,7 @@ $("#rpassword").click(function(){
 				$('#OldPasswordWrong').html("<h5>The OldPassword doesnt match</h5>");
 			}else{
 		//		alert("asdfasd00");
-				$(location).attr('href','/myaccount.html');
+				$(location).attr('href','/loginPage.html');
 			}
 			
 		});
