--- a/public/myaccount.html
+++ b/public/myaccount.html
@@ -16,12 +16,7 @@
 	<!-- Custom styles for our template -->
 	<link rel="stylesheet" href="bootstrap-theme.css" media="screen" >
 	<link rel="stylesheet" href="main.css">
-
-	<!-- HTML5 shim and Respond.js IE8 support of HTML5 elements and media queries -->
-	<!--[if lt IE 9]>
-	<script src="assets/js/html5shiv.js"></script>
-	<script src="assets/js/respond.min.js"></script>
-	<![endif]-->
+<link rel="stylesheet" href="http://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.6.3/css/font-awesome.min.css">
 </head>
 
 <body class="home">
@@ -46,7 +41,7 @@
 							<li><a href="dashboard.html">Dashboard</a></li>
 							<li><a href="profile.html">Profile</a></li>
 							<hr>
-							<li><a href="index.html">Logout</a></li>
+							<li><a href="https://www.google.com/accounts/Logout?continue=https://appengine.google.com/_ah/logout?continue=http://localhost:6003/index.html">Logout</a></li>
 						
 						</ul>
 					</li>
